RESOLVED FIXED14798
Incorrect bidi reordering of neutrals and digits after RTL embed
https://bugs.webkit.org/show_bug.cgi?id=14798
Summary Incorrect bidi reordering of neutrals and digits after RTL embed
mitz
Reported 2007-07-28 05:26:43 PDT
WebKit renders the URL as (X standing for the Hebrew letter Aleph): X^1 but Firefox renders it like this: 1^X I think WebKit is wrong. (My original test case was <span style="direction: rtl; unicode-bidi: embed">&#x05d0;</span> (1) )
Attachments
Fix bugs in resolving neutrals' levels (125.58 KB, patch)
2007-07-31 07:50 PDT, mitz
hyatt: review+
mitz
Comment 1 2007-07-31 07:50:38 PDT
Created attachment 15759 [details] Fix bugs in resolving neutrals' levels The cases fixed by the patch are quite esoteric. No layout test regressions. Includes an extensive layout test.
Dave Hyatt
Comment 2 2007-08-07 12:56:59 PDT
Comment on attachment 15759 [details] Fix bugs in resolving neutrals' levels r=me
Mark Rowe (bdash)
Comment 3 2007-08-07 14:12:28 PDT
Mark Rowe (bdash)
Comment 4 2007-08-10 00:55:05 PDT
Landed in r24977.
Note You need to log in before you can comment on or make changes to this bug.