2007-08-10  Mitz Pettel  <mitz@webkit.org>

Reviewed by Dave Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=14798
          Incorrect bidi reordering of neutrals and digits after RTL embed
          and other bugs in the bidi algorithm.

        Test: fast/text/international/bidi-neutral-run.html

        Fixed several bugs in resolving the embedding level of runs of neutral
        characters. Changed the logic to rely on the eor direction only for
        the number types, and otherwise consider the last strong type.

        * platform/BidiContext.h:
        (WebCore::BidiContext::BidiContext): Added an ASSERT.
        * platform/BidiResolver.h:
        (WebCore::::embed):
        (WebCore::::createBidiRunsForLine):
        * platform/graphics/GraphicsContext.cpp:
        (WebCore::TextRunIterator::atEnd): Changed to return true instead of
        crashing when called on the empty iterator.

2007-08-10  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Dave Hyatt.

        - test for http://bugs.webkit.org/show_bug.cgi?id=14798
          Incorrect bidi reordering of neutrals and digits after RTL embed
          and other bugs in the bidi algorithm.

        * fast/text/international/bidi-neutral-run-expected.checksum: Added.
        * fast/text/international/bidi-neutral-run-expected.png: Added.
        * fast/text/international/bidi-neutral-run-expected.txt: Added.
        * fast/text/international/bidi-neutral-run.html: Added.


Canonical link: https://commits.webkit.org/19531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24977 268f45cc-cd09-0410-ab3c-d52691b4dbfc