WebCore/platform/graphics/GraphicsContext.cpp
@@ -56,7 +56,7 @@ public:
 
     unsigned offset() const { return m_offset; }
     void increment(BidiResolver<TextRunIterator, BidiCharacterRun>&) { m_offset++; }
-    bool atEnd() const { return m_offset >= m_textRun->length(); }
+    bool atEnd() const { return !m_textRun || m_offset >= m_textRun->length(); }
     UChar current() const { return (*m_textRun)[m_offset]; }
     WTF::Unicode::Direction direction() const { return atEnd() ? WTF::Unicode::OtherNeutral : WTF::Unicode::direction(current()); }
 
